--- a/app/src/main/res/layout/sheet_lost_connection.xml
+++ b/app/src/main/res/layout/sheet_lost_connection.xml
@@ -54,9 +54,11 @@
     <Button
         android:id="@+id/retry"
         android:layout_width="match_parent"
-        android:layout_height="?actionBarSize"
+        android:layout_height="@dimen/button_height"
         android:layout_margin="@dimen/large"
         android:text="@string/try_again"
+        android:textSize="@dimen/text_headline"
+        app:cornerRadius="@dimen/extra_large"
         app:layout_constraintTop_toBottomOf="@id/caption"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
