--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,12 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- text size -->
+    <dimen name="text_headline">16sp</dimen>
     <dimen name="text_title">18sp</dimen>
+    <dimen name="text_title2">21sp</dimen>
     <!-- margin or spacing -->
     <dimen name="small">4dp</dimen>
+    <dimen name="medium">8dp</dimen>
     <dimen name="large">16dp</dimen>
     <dimen name="extra_large">24dp</dimen>
+    <dimen name="super_large">32dp</dimen>
+    <dimen name="super_extra_large">40dp</dimen>
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="button_height">60dp</dimen>
 </resources>
