--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,8 +14,8 @@
         <!-- Customize your theme here. -->
     </style>
     <style name="Theme.App.NoActionBar" parent="Theme.App">
-        <item name = "android:windowActionBar">false</item>
-        <item name = "android:windowNoTitle">true</item>
+        <item name = "windowActionBar">false</item>
+        <item name = "windowNoTitle">true</item>
     </style>
     <style name="Theme.App.LoadingDialog" parent="Theme.App">
         <item name="android:windowBackground">@android:color/transparent</item>
